[package]
name = "lexpr-macros"
description = "Internal crate implementing macros exposed by the `lexpr` crate"
version = "0.1.1"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rotty/lexpr-rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
proc-macro-hack = "0.5.4"
quote = "0.6"
