[package]
name = "lexpr-macros"
description = "Internal crate implementing macros exposed by the `lexpr` crate"
version = "0.2.4"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rotty/lexpr-rs"
edition = "2021"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
