[package]
name = "lexpr"
description = "A representation for Lisp data"
version = "0.2.7"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rotty/lexpr-rs"
readme = "README.md"
documentation = "https://docs.rs/lexpr/"
keywords = ["lisp", "s-expression", "sexp", "sexpr"]
categories = ["encoding", "data-structures", "parser-implementations"]
edition = "2018"

[features]
default = ["fast-float-parsing"]
fast-float-parsing = []

[dependencies]
itoa = "1.0"
ryu = "1.0.0"
lexpr-macros = { version = "0.2.2", path = "../lexpr-macros" }

[dev-dependencies]
criterion = "0.4.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8.1"

[[bench]]
name = "bench"
harness = false
